Change font from Source Sans Pro to Bitter

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -22,7 +22,7 @@
 
 // Font.
 	$font: (
-		family:				('Source Sans Pro', Arial, Helvetica, sans-serif),
+		family:				('Bitter', Arial, Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
 		weight:				300,
 		weight-bold:		700
