--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -317,6 +317,12 @@ input, select, textarea {
 
 		}
 
+		.dropdown-menu {
+			margin-left: 400px;
+			max-width: 400px;
+			overflow-x: auto;
+		}
+
 /* Row */
 
 	.row {
