--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3387,7 +3387,7 @@ input, select, textarea {
 				}
 
 			.dropotron li {
-				border-top: solid 1px rgba(255, 255, 255, 0.25);
+				border-bottom: solid 1px rgba(255, 255, 255, 0.25);
 				padding: 0;
 				position: relative;
 			}
