--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,7 +319,7 @@ input, select, textarea {
 
 		.dropdown-menu {
 			margin-left: 400px;
-			max-width: 400px;
+			max-width: 800px;
 			overflow-x: auto;
 		}
 
@@ -3369,9 +3369,9 @@ input, select, textarea {
 
 			.dropotron.level-0 {
 				margin-top: 1.125rem;
-				margin-left: 0;
+				margin-left: -200px;
 			}
-
+				/* dropotron arrow */
 				.dropotron.level-0:before {
 					-moz-transform: rotate(45deg);
 					-webkit-transform: rotate(45deg);
@@ -3379,7 +3379,7 @@ input, select, textarea {
 					transform: rotate(45deg);
 					background-color: #287a51;
 					content: '';
-					height: 0.75rem;
+					height: 0rem;
 					position: absolute;
 					right: 2rem;
 					top: -0.375rem;
