--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2898,6 +2898,7 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: calc(100% - 6rem);
 		width: 80rem;
+		padding-top: 10rem;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -3666,6 +3667,28 @@ input, select, textarea {
 		transform: translateX(0);
 		visibility: visible;
 	}
+
+/* Main Title Section */
+  
+  .background {
+	background-image: url('https://ssl.gstatic.com/atari/images/impression-header.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	position: relative;
+  }
+  
+  .title {
+	color: white;
+	font-size: 36px;
+	text-align: center;
+	position: absolute;
+	bottom: 5;
+	left: 0;
+	right: 0;
+	margin-bottom: 20px;
+	padding-top: 100px;
+  }
 
 /* Banner */
 
