--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3678,6 +3678,17 @@ input, select, textarea {
 	position: relative;
   }
   
+  /* tint over backgroud image */
+  .background::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(36, 36, 42, 0.2);
+  }
+  
   .title {
 	color: white;
 	font-size: 36px;
