--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2898,7 +2898,7 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: calc(100% - 6rem);
 		width: 80rem;
-		padding-top: 10rem;
+		padding-top: 5rem;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -3676,10 +3676,11 @@ input, select, textarea {
 	background-repeat: no-repeat;
 	background-position: center;
 	position: relative;
+	opacity: 0.6;
   }
   
   /* tint over backgroud image */
-  .background::before {
+  /* .background::before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -3687,7 +3688,7 @@ input, select, textarea {
 	width: 100%;
 	height: 100%;
 	background-color: rgba(36, 36, 42, 0.2);
-  }
+  } */
   
   .title {
 	color: white;
