--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1914,7 +1914,8 @@ input, select, textarea {
 			transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 			background-color: #3e3e47;
 			color: #2e2e35;
-			content: '\f061';
+			/* down arrow change */
+			content: '\f063';
 			font-family: 'Font Awesome 5 Free';
 			font-weight: 900;
 			position: absolute;
@@ -4013,6 +4014,10 @@ input, select, textarea {
 			max-width: 80rem;
 			text-align: center;
 		}
+
+		/* .copyBorder {
+			color: #21ad67;
+		} */
 
 		@media screen and (max-width: 1280px) {
 
