--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3905,6 +3905,7 @@ input, select, textarea {
   .title {
 	color: white;
 	font-size: 36px;
+	font-family: 'Courier Regular';
 	text-align: center;
 	position: absolute;
 	bottom: 5;
