--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -318,9 +318,8 @@ input, select, textarea {
 		}
 
 		.dropdown-menu {
-			margin-left: 400px;
-			max-width: 800px;
-			overflow-x: auto;
+			display: flex;
+			margin-left: auto;
 		}
 
 /* Row */
@@ -3709,7 +3708,7 @@ input, select, textarea {
 
 			.dropotron.level-0.dropdown-menu{
 				margin-top: 1.125rem;
-				margin-left: -200px;
+				margin-left: -275px;
 			}
 
 				/* dropotron arrow */
@@ -3754,6 +3753,7 @@ input, select, textarea {
 			
 			.soon {
 				color: red;
+				font-size: 16px;
 			}
 
 		#header > .navPanelToggle {
