--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4010,7 +4010,7 @@ input, select, textarea {
 	background-repeat: no-repeat;
 	background-position: center;
 	position: relative;
-	opacity: 0.6;
+	opacity: 1;
   }
   
   /* tint over backgroud image */
@@ -4027,7 +4027,8 @@ input, select, textarea {
   .title {
 	color: white;
 	font-size: 36px;
-	font-family: 'Courier Regular';
+	font-weight: 500;
+	font-family: 'Courier New';
 	text-align: center;
 	position: absolute;
 	bottom: 5;
@@ -4062,7 +4063,7 @@ input, select, textarea {
 
   .grBand {
 	color: white;
-	min-height: 2.25rem;
+	min-height: 3rem;
 	background-color: #45b07a;
 	display: flex;
 	justify-content: center;
